--- a/docs/src/main/asciidoc/mailer.adoc
+++ b/docs/src/main/asciidoc/mailer.adoc
@@ -110,6 +110,12 @@ NOTE: The two APIs are equivalent feature-wise. Actually the `Mailer` implementa
 `io.quarkus.mailer.ReactiveMailer` is deprecated in favor of `io.quarkus.mailer.reactive.ReactiveMailer`.
 ====
 
+[TIP]
+.Mutiny
+====
+The reactive mailer uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first.
+====
+
 To send a simple email, proceed as follows:
 
 [source, java]
