--- a/docs/src/main/asciidoc/mongodb.adoc
+++ b/docs/src/main/asciidoc/mongodb.adoc
@@ -289,6 +289,12 @@ The `io.quarkus.mongodb.ReactiveMongoClient` client is deprecated and will be re
 It is recommended to switch to the `io.quarkus.mongodb.reactive.ReactiveMongoClient` client providing the `Mutiny` API.
 ====
 
+[TIP]
+.Mutiny
+====
+The MongoDB reactive client uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first.
+====
+
 [source,java]
 ----
 package org.acme.rest.json;
