--- a/docs/src/main/asciidoc/neo4j.adoc
+++ b/docs/src/main/asciidoc/neo4j.adoc
@@ -415,7 +415,13 @@ If you have access to Neo4j 4.0, you can go fully reactive.
 
 To make life a bit easier, we will use https://smallrye.io/smallrye-mutiny/[Mutiny] for this.
 
-Please add the following dependency to your `pom.xml`
+[TIP]
+.Mutiny
+====
+The following example uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first.
+====
+
+Add the following dependency to your `pom.xml`:
 
 [source,xml]
 ----
