--- a/docs/src/main/asciidoc/reactive-messaging.adoc
+++ b/docs/src/main/asciidoc/reactive-messaging.adoc
@@ -120,6 +120,12 @@ public class GreetingService {
 }
 ----
 
+[TIP]
+.Mutiny
+====
+The previous example uses Mutiny reactive types, if you're not familiar with them, we recommend reading the link:getting-started-reactive#mutiny[Getting Started with Reactive guide].
+====
+
 === Configuring the address
 
 The `@ConsumeEvent` annotation can be configured to set the address:
