--- a/docs/src/main/asciidoc/index.adoc
+++ b/docs/src/main/asciidoc/index.adoc
@@ -52,6 +52,7 @@ include::quarkus-intro.adoc[tag=intro]
 * link:security-openid-connect-multitenancy.html[Supporting Multi-Tenancy in OpenID Connect Applications]
 * link:security-keycloak-authorization.html[Keycloak Authorization]
 * link:kogito.html[Using Kogito (business automation with processes and rules)]
+* link:optaplanner.html[Using AI to optimize a schedule with OptaPlanner]
 * link:security-oauth2.html[Using OAuth2 RBAC]
 * link:tika.html[Using Apache Tika]
 * link:mongodb.html[Using MongoDB]
